--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     </div>
 
     <div class="illustration">
-        <img src="images/truck_load.webp" alt="Delivery truck illustration">
+        <img src="https://cdn.prod.website-files.com/6410c4927a4ae326761f2b26/646261b96b63336c71370086_blackbuck.webp" alt="Delivery truck illustration">
     </div>
 
     <div class="permission-first-item">
-        <img src="images/call-permission.png" alt="Phone icon" class="icon">
+        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Phone icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Manage phone calls</p>
             <p class="permission-subtitle">BlackBuck needs to manage your phone calls to help you call verified
@@ -156,7 +156,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="images/call-permission.png" alt="Call logs icon" class="icon">
+        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Call logs icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Store your Call Logs</p>
             <p class="permission-subtitle">BlackBuck stores your call log data to sync your call history, show
@@ -165,7 +165,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="images/location-permission.png" alt="Location icon" class="icon">
+        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Location icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Store your Location</p>
             <p class="permission-subtitle">BlackBuck stores your location data to update your profile with the location
@@ -174,7 +174,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="images/notification.png" alt="Notification icon" class="icon">
+        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Notification icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Get real-time updates</p>
             <p class="permission-subtitle">Allow push notifications to get real-time updates.</p>
