margin added: trial 3

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         .illustration img {
             width: 160px;
             height: auto;
+            margin: 2px;
         }
 
         .permission-first-item, .permission-item {
@@ -87,6 +88,7 @@
             height: 14px;
             flex: 0 0 14px;
             margin-top: 4px;
+            margin: 4px;
             object-fit: contain;
             filter: brightness(0) saturate(100%) invert(20%) sepia(16%) saturate(1500%) hue-rotate(175deg) brightness(100%) contrast(90%);
         }
