fixed hegiht: trial 6

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
 
         .illustration img {
             width: 160px;
-            height: auto;
-            margin: 2px;
+            height: 62px;
         }
 
         .permission-first-item, .permission-item {
@@ -149,7 +148,7 @@
     </div>
 
     <div class="permission-first-item">
-        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Phone icon" class="icon">
+        <img src="images/call-permission.png" alt="Phone icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Manage phone calls</p>
             <p class="permission-subtitle">BlackBuck needs to manage your phone calls to help you call verified
@@ -158,7 +157,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Call logs icon" class="icon">
+        <img src="images/call-permission.png" alt="Call logs icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Store your Call Logs</p>
             <p class="permission-subtitle">BlackBuck stores your call log data to sync your call history, show
@@ -167,7 +166,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Location icon" class="icon">
+        <img src="images/location-permission.png" alt="Location icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Store your Location</p>
             <p class="permission-subtitle">BlackBuck stores your location data to update your profile with the location
@@ -176,7 +175,7 @@
     </div>
 
     <div class="permission-item">
-        <img src="https://cdn-icons-png.flaticon.com/128/483/483947.png" alt="Notification icon" class="icon">
+        <img src="images/notification.png" alt="Notification icon" class="icon">
         <div class="permission-content">
             <p class="permission-title">Get real-time updates</p>
             <p class="permission-subtitle">Allow push notifications to get real-time updates.</p>
