--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     </div>
 
     <div class="policy-text">
-        <p>By selecting "Agree"you confirm that you have read and agree to the <a href="terms-n-conditions-bb-app.html"
+        <p>By selecting "Agree"you confirm that you have read and agree to the <a href="www.google.com"
                 class="policy-link">Terms & Conditions</a></p>
     </div>
 </body>
