--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -144,7 +143,7 @@
     </div>
 
     <div class="illustration">
-        <img src="https://cdn.prod.website-files.com/6410c4927a4ae326761f2b26/646261b96b63336c71370086_blackbuck.webp" alt="Delivery truck illustration">
+        <img src="images/truck_load.webp" alt="Delivery truck illustration">
     </div>
 
     <div class="permission-first-item">
@@ -190,7 +189,7 @@
     </div>
 
     <div class="policy-text">
-        <p>By selecting "Agree"you confirm that you have read and agree to the <a href="www.google.com"
+        <p>By selecting "Agree"you confirm that you have read and agree to the <a href="terms-n-conditions-bb-app.html"
                 class="policy-link">Terms & Conditions</a></p>
     </div>
 </body>
